--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -44,7 +44,8 @@
                     </div>
                     <div class="form-error">{{privacyErrorMsg}}</div>
                 </div>
-                <button class="btn-send" type="submit" #sendButton>Send message :)</button>
+                <button class="btn-send" type="submit" #sendButton>Send message :)</button> 
+                <img (click)="goToAnchor('welcome')" class="arrow-up" src="assets/icons/arrow_up.ico">
             </form>
         </div>
     </div>
