--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -83,7 +83,7 @@ header {
         }
 
         .mobile-links {
-            display: flex;
+            display: none;
             flex-direction: column;
             align-items: flex-start;
             width: 100%;
