--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -35,6 +35,6 @@
         </div>
         <p>I have gained experience in building projects with various<br>
             front end technologies and concepts</p>
-        <button class="btn-get-in-touch">Get in touch</button>
+        <button (click)="goToAnchor('contact')" class="btn-get-in-touch">Get in touch</button>
     </div>
 </div>
