--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<app-welcome-section></app-welcome-section>
+<app-welcome-section id="welcome"></app-welcome-section>
 <app-about-me id="about-me"></app-about-me>
 <app-skills id="skills"></app-skills>
 <app-portfolio ></app-portfolio>
