--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,20 +1,46 @@
+.vector {
+    margin-top: -250px;
+    width: 100%;
+    position: relative;
+
+    @media (max-width: 1400px) {
+        width: auto;
+    }
+
+    @media (max-width:1340px) {
+        margin-top: -180px;
+    }
+}
+
 .vector-bg {
     background-color: #141D2F;
 
-    @media(max-width: 1050px) {}
+    @media(max-width: 1050px) {
+        display: none;
+    }
 }
 
 
 .skill-container {
     display: flex;
     justify-content: space-between;
-    margin-top: -670px;
+    margin-top: -800px;
     position: relative;
 
+    @media(max-width: 1670px) {
+        margin-top: -700px;
+    }
+
+    @media(max-width: 1500px) {
+        margin-top: -600px;
+    }
+
     @media(max-width: 1050px) {
+        margin-top: 0;
         justify-content: center;
         flex-direction: column-reverse;
         align-items: center;
+        background-color: #141D2F;
     }
 }
 
@@ -113,9 +139,6 @@
 
         @media(max-width: 1050px) {
             flex-direction: column;
-        }
-
-        @media (max-width:850px) {
             hr {
                 width: 100vw;
             }
@@ -157,16 +180,3 @@
     }
 }
 
-.vector {
-    margin-top: -350px;
-    width: 100%;
-    position: relative;
-
-    @media (max-width: 1400px) {
-        width: auto;
-    }
-
-    @media (max-width:1340px) {
-        margin-top: -180px;
-    }
-}
