--- a/src/app/welcome-section/welcome-section.component.html
+++ b/src/app/welcome-section/welcome-section.component.html
@@ -10,6 +10,6 @@
             <h2>Frontend Developer</h2> 
         </div>
     </div>
-    <button class="btn-talk">Let´s Talk</button>
+    <button (click)="goToAnchor('contact')" class="btn-talk">Let´s Talk</button>
     
 </div>
