--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact-container" id="contact">
+<div class="contact-container max-wdth" id="contact">
     <img class="shadow" src="/assets/shadows/shadow_5.png">
     <div class="contact-header">
         <h2>Contact</h2>
