--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <hr>
-<div class="footer-container">
+<div class="footer-container max-wdth">
     <div class="impress">
         <img src="assets/phil_logo.png">
         <a routerLink="/imprint">Impressum</a>
@@ -10,7 +10,7 @@
     </div>
     <div class="social-buttons">
         <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
-        <img src="assets/icons/mail.svg">
+        <a href="mailto:pmoessl@outlook.de"><img src="assets/icons/mail.svg"></a>
         <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/')" src="assets/icons/linkedin.svg">
     </div>
 </div>
