--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="max-wdth">
     <div class="desktop-nav">
         <a routerLink="/"><img (click)="goDown('header')" src="assets/phil_logo.png"></a>
         <div *ngIf="router.url == '/'">
