--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,7 +1,7 @@
 <div class="vector-bg">
     <img class="vector" src="/assets/shadows/vector.png">
 </div>
-<div class="skill-container">
+<div class="skill-container max-wdth">
     <div class="icon-container">
         <div class="icon-row">
             <div *ngFor="let currentRow of firstRow" class="single-icon">
