--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,15 +2,15 @@
     <div class="social-buttons">
         <hr>
         <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
-        <img src="assets/icons/mail.svg">
-        <img src="assets/icons/linkedin.svg">
+        <a href="mailto:pmoessl@outlook.de"><img  src="assets/icons/mail.svg"></a>
+        <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/')" src="assets/icons/linkedin.svg">
     </div>
     <div>
         <img (click)="goToAnchor('contact')" class="arrow-down" src="assets/icons/arrow_down.ico">
     </div>
 </div>
 
-<div class="about-me-section">
+<div class="about-me-section max-wdth">
     <div class="about-me-text">
         <div>
             <h2>About me</h2>
