--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -13,7 +13,7 @@
 
 .contact-header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     position: relative;
     z-index: 1;
@@ -28,12 +28,14 @@
     }
 
     hr {
-        width: 500px;
+        width: 5000px;
         height: 4px;
         background-color: #00BEE8;
         border: none;
         border-radius: 4px;
         margin: 0;
+        position: absolute;
+        left: 750px;
     }
 
     @media (max-width:1050px) {
@@ -68,6 +70,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            position: relative;
 
             @media (max-width:800px) {
                 flex-direction: column-reverse;
@@ -79,22 +82,21 @@
             }
 
             hr {
-                width: 50px;
+                width: 5000px;
                 height: 4px;
                 background-color: #1CE6B6;
                 border: none;
                 border-radius: 4px;
                 margin: 0;
+                position: absolute;
+                right: 525px;
             }
         }
 
         p {
-            margin-left: 60px;
 
-            @media (max-width:800px) {
-                margin-left: 0;
             }
-        }
+        
     }
 
     .form-section {
