--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -17,7 +17,7 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #141D2F;
+    // background-color: #141D2F;
     justify-content: space-between;
     padding-left: 50px;
     padding-right: 50px;
@@ -32,8 +32,10 @@ hr {
 
     .impress {
         display: flex;
+        align-items: center;
         flex-direction: column;
         gap: 10px;
+        margin-top: 20px;
 
         a {
             text-decoration: none;
@@ -58,6 +60,10 @@ hr {
                 cursor: pointer;
                 scale: 1.2;
             }
+        }
+        a {
+            text-decoration: none;
+            height: 30px;
         }
     }
 }
