--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -48,7 +48,7 @@ header {
     .desktop-nav {
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         width: 100%;
     }
 
