--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="above-aboutme">
+<div data-aos="fade-right" class="above-aboutme">
     <div class="social-buttons">
         <hr>
         <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="about-me-section max-wdth">
+<div data-aos="zoom-in" class="about-me-section max-wdth">
     <div class="about-me-text">
         <div>
             <h2>About me</h2>
