--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -2,7 +2,7 @@
     <img class="vector" src="/assets/shadows/vector.png">
 </div>
 <div class="skill-container max-wdth">
-    <div class="icon-container">
+    <div data-aos="fade-right" class="icon-container">
         <div class="icon-row">
             <div *ngFor="let currentRow of firstRow" class="single-icon">
                 <img src="assets/icons/{{ currentRow.img }}">
