--- a/src/app/welcome-section/welcome-section.component.html
+++ b/src/app/welcome-section/welcome-section.component.html
@@ -1,4 +1,4 @@
-<div class="welcome-container max-wdth">
+<div data-aos="zoom-in" class="welcome-container max-wdth">
     <img class="right-shadow" src="assets/shadows/shadow_3.png">
     <img class="left-shadow" src="assets/shadows/shadow_4.png">
     <div class="text-area">
