--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,7 @@
         <hr>
     </div>
     <div class="contact-context">
-        <div class="problem-section">
+        <div data-aos="fade-right" class="problem-section">
             <div class="problem-header">
                 <hr>
                 <h3>Got a problem to solve?</h3>
@@ -15,7 +15,7 @@
                 with my work.</p>
             <p>Need a Frontend developer?<b>Contact me!</b></p>
         </div>
-        <div>
+        <div data-aos="fade-left">
             <form (ngSubmit)="sendMail()" method="post" class="form-section" autocomplete="off" ngNativeValidate #myForm>
                 <!-- Name Input -->
                 <div class="input-section">
