--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -17,6 +17,8 @@
     align-items: center;
     position: relative;
     z-index: 1;
+    max-width: 800px;
+    margin: auto;
 
     h2 {
         margin: 0;
@@ -35,7 +37,7 @@
         border-radius: 4px;
         margin: 0;
         position: absolute;
-        left: 750px;
+        left: 590px;
     }
 
     @media (max-width:1050px) {
@@ -43,7 +45,9 @@
         margin-bottom: 20px;
 
         hr {
-            width: 100%;
+            width: 200%;
+            position: relative;
+            left: 0;
         }
     }
 }
@@ -89,14 +93,13 @@
                 border-radius: 4px;
                 margin: 0;
                 position: absolute;
-                right: 525px;
+                right: 460px;
+
+                @media (max-width:1000px) {
+                    display: none;
+                }
             }
         }
-
-        p {
-
-            }
-        
     }
 
     .form-section {
@@ -166,7 +169,7 @@
             color: red;
             font-size: 16px;
             font-weight: bold;
-            min-height: 20px;
+            min-height: 30px;
         }
 
         .purple {
