--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-container max-wdth" id="projects">
+<div data-aos="zoom-in" class="portfolio-container max-wdth" id="projects">
     <div class="portfolio-text-container">
         <div class="portfolio-header">
             <hr>
