--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     position: relative;
     background-color: #141D2F;
-    margin-top: -120px;
+    margin-top: -90px;
     padding-top: 200px;
 }
 
@@ -39,7 +39,9 @@
             margin-bottom: 20px;
 
             hr {
-                width: 100%;
+                width: 200%;
+                position: relative;
+                left: 0;
             }
         }
     }
@@ -57,6 +59,11 @@
         color: white;
         font-size: 16px;
         padding-left: 50px;
+
+        @media(max-width: 1050px) {
+            text-align: center;
+            padding-left: 0;
+        }
     }
 }
 
