--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
     font-family: 'Poppins', sans-serif;
     width: 100%;
     overflow-x: hidden;
-    background-color:  #141D2F;
+    background-color: #141D2F;
     scrollbar-width: thin;
     scrollbar-color: #00BEE8;
 }
@@ -15,9 +15,7 @@ body {
 .wrapper {
     overflow-x: hidden;
 
-    @media(min-width:1440px) {
-        
-    }
+    @media(min-width:1440px) {}
 }
 
 .max-wdth {
@@ -26,6 +24,11 @@ body {
     box-sizing: border-box;
     padding-left: 50px;
     padding-right: 50px;
+
+    @media(max-width:400px) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 ::-webkit-scrollbar {
@@ -34,15 +37,15 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(255,255,255,.096);
+    background: rgba(255, 255, 255, .096);
     border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background:  #1CDAE6;
+    background: #1CDAE6;
     border-radius: 5px
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background:  #1CDAE6;
+    background: #1CDAE6;
 }
