change form and resp

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,7 +3,7 @@
         <hr>
         <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
         <a href="mailto:pmoessl@outlook.de"><img  src="assets/icons/mail.svg"></a>
-        <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/')" src="assets/icons/linkedin.svg">
+        <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/?trk=public-profile-join-page')" src="assets/icons/linkedin.svg">
     </div>
     <div>
         <img (click)="goToAnchor('contact')" class="arrow-down" src="assets/icons/arrow_down.ico">
