--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -225,6 +225,10 @@
         position: relative;
         z-index: 1;
 
+        @media(max-width:370px) {
+            display: none;
+        }
+
         a {
             text-decoration: none;
             color: white;
