add new about-me text and change img size

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,8 +2,9 @@
     <div class="social-buttons">
         <hr>
         <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
-        <a href="mailto:pmoessl@outlook.de"><img  src="assets/icons/mail.svg"></a>
-        <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/?trk=public-profile-join-page')" src="assets/icons/linkedin.svg">
+        <a href="mailto:pmoessl@outlook.de"><img src="assets/icons/mail.svg"></a>
+        <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/?trk=public-profile-join-page')"
+            src="assets/icons/linkedin.svg">
     </div>
     <div>
         <img (click)="goToAnchor('contact')" class="arrow-down" src="assets/icons/arrow_down.ico">
@@ -16,15 +17,12 @@
             <h2>About me</h2>
             <hr>
         </div>
-        <p>Hi, I am a junior Front-End developer based in Neugersdorf, Germany. I have gained experience in developing
-            Web
-            and Mobile applications with Angular and Javascript. Since i´am a Robot programer i have always
-            been fascinated in IT and especially programming. So I used the chance in Developer Akademie to dive into
-            new
-            projects and challanges. Now my enthusiasm turned into a passion. </p>
+        <p>Hi! I´m Philipp Mössl a junior Front-End developer based in Neugersdorf, Germany.I have passion for building clean
+            web applications with intuitive functionalities. I enjoy the process of turning ideas into reality using
+            creative solutions. I’m always curious about learning new skills, tools, and concepts. </p>
         <div class="d-flex">
             <img src="assets/icons/bulb.svg">
-            <p>I am ready to take the next step in my career and find a position as a Junior Web Developer which allows
+            <p>I am ready to take the next step in my career and find a position as a junior web developer which allows
                 me to collaborate with team and improve my programming skills. I look forward the opportunity of
                 contributing my technical knowledge to solve problems and help people and businesses with user-friendly
                 and visually pleasing products. </p>
