--- a/src/app/welcome-section/welcome-section.component.html
+++ b/src/app/welcome-section/welcome-section.component.html
@@ -8,7 +8,7 @@
         <div class="">
             <div>
                 <h1>Philipp Mössl</h1>
-                <h2>Frontend Developer</h2>
+                <h2>Fullstack Developer</h2>
             </div>
             
         </div>
