--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -17,7 +17,7 @@
             <h2>About me</h2>
             <hr>
         </div>
-        <p>Hi! I´m Philipp Mössl a junior Front-End developer based in Neugersdorf, Germany.I have passion for building clean
+        <p>Hi! I´m Philipp Mössl a junior Fullstack developer based in Neugersdorf, Germany.I have passion for building clean
             web applications with intuitive functionalities. I enjoy the process of turning ideas into reality using
             creative solutions. I’m always curious about learning new skills, tools, and concepts. </p>
         <div class="d-flex">
