--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -2,29 +2,66 @@
     <img class="vector" src="/assets/shadows/vector.png">
 </div>
 <div class="skill-container max-wdth">
-    <div data-aos="fade-right" class="icon-container">
-        <div class="icon-row">
-            <div *ngFor="let currentRow of firstRow" class="single-icon">
-                <img src="assets/icons/{{ currentRow.img }}">
-                <span>{{ currentRow.text }}</span>
+    <div class="icons-wrapper">
+
+        <div data-aos="fade-right" class="icon-container" [class.hidden]="!isFrontend">
+            <div class="icon-row">
+                <div *ngFor="let currentRow of firstRowFrontend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
+            </div>
+            <div class="icon-row">
+                <div *ngFor="let currentRow of secondRowFrontend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
+            </div>
+            <div class="icon-row">
+                <div *ngFor="let currentRow of thirdRowFrontend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
+            </div>
+            <div class="icon-row">
+                <div *ngFor="let currentRow of fourthRowFrontend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
             </div>
         </div>
-        <div class="icon-row">
-            <div *ngFor="let currentRow of secondRow" class="single-icon">
-                <img src="assets/icons/{{ currentRow.img }}">
-                <span>{{ currentRow.text }}</span>
+        <div data-aos="fade-right" class="icon-container" [class.hidden]="isFrontend">
+            <div class="icon-row">
+                <div *ngFor="let currentRow of firstRowBackend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
+            </div>
+            <div class="icon-row">
+                <div *ngFor="let currentRow of secondRowBackend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
+            </div>
+            <div class="icon-row">
+                <div *ngFor="let currentRow of thirdRowBackend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
+            </div>
+            <div class="icon-row">
+                <div *ngFor="let currentRow of fourthRowBackend" class="single-icon">
+                    <img src="assets/icons/{{ currentRow.img }}">
+                    <span>{{ currentRow.text }}</span>
+                </div>
             </div>
         </div>
-        <div class="icon-row">
-            <div *ngFor="let currentRow of thirdRow" class="single-icon">
-                <img src="assets/icons/{{ currentRow.img }}">
-                <span>{{ currentRow.text }}</span>
+        <div class="arrow-container">
+            <div class="arrow left-arrow" (click)="toggleIcons()">
+                &#8592;
             </div>
-        </div>
-        <div class="icon-row">
-            <div *ngFor="let currentRow of fourthRow" class="single-icon">
-                <img src="assets/icons/{{ currentRow.img }}">
-                <span>{{ currentRow.text }}</span>
+            <div class="arrow right-arrow" (click)="toggleIcons()">
+                &#8594;
             </div>
         </div>
     </div>
@@ -34,7 +71,7 @@
             <hr>
         </div>
         <p>I have gained experience in building projects with various<br>
-            front end technologies and concepts</p>
+            front end and back end technologies and concepts</p>
         <button (click)="goToAnchor('contact')" class="btn-get-in-touch">Get in touch</button>
     </div>
 </div>
