--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,199 +1,3 @@
-// .vector {
-//     margin-top: -200px;
-//     width: 100%;
-//     position: relative;
-
-//     @media (max-width: 1440px) {
-//         width: auto;
-//     }
-
-//     @media (max-width:1400px) {
-//         margin-top: -180px;
-//     }
-// }
-
-// .vector-bg {
-//     background-color: #141D2F;
-
-//     @media(max-width: 1050px) {
-//         display: none;
-//     }
-// }
-
-
-// .skill-container {
-//     display: flex;
-//     justify-content: space-between;
-//     margin-top: -800px;
-//     position: relative;
-
-//     @media(max-width: 1670px) {
-//         margin-top: -700px;
-//     }
-
-//     @media(max-width: 1500px) {
-//         margin-top: -600px;
-//     }
-
-//     @media(max-width: 1050px) {
-//         margin-top: 0;
-//         justify-content: center;
-//         flex-direction: column-reverse;
-//         align-items: center;
-//         background-color: #141D2F;
-//     }
-// }
-
-// .icon-container {
-//     display: flex;
-//     flex-wrap: wrap;
-//     gap: 50px;
-//     position: relative;
-//     z-index: 1;
-
-//     @media(max-width: 1050px) {
-//         margin-left: 0;
-//     }
-
-//     @media(max-width: 550px) {
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: center;
-//     }
-
-//     .icon-row {
-//         display: flex;
-//         flex-direction: column;
-//         gap: 30px;
-
-//         @media(max-width: 550px) {
-//             flex-direction: unset;
-//         }
-//     }
-
-//     .single-icon {
-//         display: flex;
-//         flex-direction: column;
-//         color: white;
-//         text-align: center;
-//         gap: 5px;
-
-//         img {
-//             height: 64px;
-
-//             &:hover {
-//                 animation: bounce 1s ease infinite;
-//             }
-
-//             @keyframes bounce {
-
-//                 0%,
-//                 20%,
-//                 50%,
-//                 80%,
-//                 100% {
-//                     transform: translateY(0);
-//                 }
-
-//                 40% {
-//                     transform: translateY(-30px);
-//                 }
-
-//                 60% {
-//                     transform: translateY(-15px);
-//                 }
-//             }
-
-//             @media(max-width: 550px) {
-//                 height: 32px;
-//                 ;
-//             }
-
-//         }
-//     }
-// }
-
-// .skill-text-container {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-
-//     @media(max-width: 1050px) {
-//         justify-content: center;
-//         align-items: center;
-//         text-align: center;
-
-//         p {
-//             padding-left: 20px;
-//             padding-right: 20px;
-//         }
-//     }
-
-//     .skill-header {
-//         display: flex;
-//         align-items: center;
-//         position: relative;
-
-//         hr {
-//             width: 5000px;
-//             height: 4px;
-//             background-color: #1CE6B6;
-//             border: none;
-//             border-radius: 4px;
-//             position: absolute;
-//             left: 250px;
-//         }
-
-//         @media(max-width: 1050px) {
-//             flex-direction: column;
-
-//             hr {
-//                 width: 100vw;
-//                 position: relative;
-//                 left: 0;
-//             }
-//         }
-//     }
-
-//     h2 {
-//         color: white;
-//         font-size: 90px;
-//         margin: 0;
-
-//         @media (max-width: 450px) {
-//             font-size: 64px;
-//         }
-//     }
-
-//     p {
-//         color: white;
-//         font-size: 16px;
-//     }
-
-//     .btn-get-in-touch {
-//         width: 200px;
-//         padding: 15px 30px;
-//         background-color: #00BEE8;
-//         color: white;
-//         cursor: pointer;
-//         border: none;
-//         border-radius: 10px;
-//         font-size: 24px;
-//         transition: all 125ms ease-in-out;
-//         position: relative;
-//         z-index: 1;
-
-//         &:hover {
-//             background-color: #4B47FF;
-//             scale: 1.1;
-//         }
-
-//         @media(max-width: 1050px) {
-//             margin-bottom: 50px;
-//         }
-//     }
-// }
-
 .vector {
     margin-top: -200px;
     width: 100%;
@@ -263,6 +67,8 @@
 }
 
 .icon-container {
+    // height: 95px;
+    // width: 125px;
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
@@ -274,7 +80,12 @@
     }
 
     @media(max-width: 1050px) {
+        justify-content: center;
         margin-left: 0;
+    }
+
+    @media(max-width: 760px) {
+        justify-content: center;
     }
 
     @media(max-width: 550px) {
@@ -294,11 +105,17 @@
     }
 
     .single-icon {
+        height: 95px;
+        width: 125px;
         display: flex;
         flex-direction: column;
         color: white;
         text-align: center;
         gap: 5px;
+
+        @media(max-width: 550px) {
+            width: auto;
+        }
 
         img {
             height: 64px;
@@ -327,7 +144,7 @@
             }
 
             @media(max-width: 550px) {
-                height: 32px;
+                height: 32px ;
             }
         }
     }
