--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,24 @@
 html {
     scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 body {
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif !important;
     width: 100%;
     overflow-x: hidden;
     background-color: #141D2F;
     scrollbar-width: thin;
     scrollbar-color: #00BEE8;
 }
+
+h1 {
+    font-family: 'Poppins', sans-serif !important;
+}
+
+html, body { height: 100%; }
+// body { margin: 0; }
 
 .wrapper {
     overflow-x: hidden;
@@ -49,5 +57,4 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #1CDAE6;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
