--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -142,6 +142,7 @@
 
                     @media (max-width:500px) {
                         font-size: 16px;
+                        padding: 10px 20px;
                     }
                 }
 
@@ -172,6 +173,7 @@
                 border-bottom-right-radius: 15px;
                 border-bottom-left-radius: 15px;
                 height: 400px;
+                //max-height: 270px;
                 width: 100%;
                 padding: 45px 25px;
                 display: flex;
@@ -201,7 +203,7 @@
                 }
 
                 @media (max-width:1340px) {
-                    height: 300px;
+                    max-height: 270px;
                 }
 
                 @media (max-width:500px) {
@@ -226,7 +228,7 @@
         position: relative;
         z-index: 1;
 
-        @media(max-width:370px) {
+        @media(max-width:500px) {
             display: none;
         }
 
