--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -91,13 +91,16 @@
             transition: all 125ms ease-in-out;
 
             img {
+                border-radius: 15px;
                 
                 @media (max-width: 1340px) {
                     height: 400px;
+                    border-radius: 10px;
                 }
 
                 @media (max-width: 500px) {
                     height: 300px;
+                    border-radius: 0px;
                 }
             }
 
